<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/colorMain">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceAdopt"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/grey"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceMatch"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/grey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceWalk"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/grey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceHair"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/grey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceTools"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/grey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceHotel"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/grey"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceVeterinary"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/grey"/>
    </LinearLayout>



</LinearLayout>